fix error text color contrast

--- a/styles/nitter/catppuccin.user.css
+++ b/styles/nitter/catppuccin.user.css
@@ -122,6 +122,15 @@
         border-color: @accent-color !important;
       }
     }
+        
+    /* error text color contrast */
+    .error-panel{
+      color: @crust;
+      a{
+        color: @crust;
+        text-decoration: underline;
+      }
+    }
   }
 }
 
